fix div spacing

--- a/style.css
+++ b/style.css
@@ -123,21 +123,23 @@ hr {
 }
 
 .videos__container {
+  width: 100%;
+  height: 100px;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
-.video {
-  width: 310px;
-
-  margin-bottom: 30px;
+.video {  
+  width: 360px;
+  margin-bottom: 20px;
+  padding: 10px; 
 }
 
 .video__thumbnail {
   width: 100%;
-  height: 170px;
+  height: 230px;
 }
 
 .video__thumbnail img {
